--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -369,7 +369,7 @@ C_B_H_14 : "ᴅᴇʟᴇᴛɪɴɢ ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs..."
 C_B_H_15 : "ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs ʜᴀᴠᴇ ʙᴇᴇɴ ᴅᴇʟᴇᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 C_B_H_16 : "ʏᴏᴜ ʜᴀᴠᴇɴ'ᴛ ᴄʟᴏɴᴇᴅ ᴀɴʏ ʙᴏᴛs ʏᴇᴛ."
 
-c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴍᴀʜᴀ ꭙ мυѕιᴄ ♪ [ ɴᴏ ♡゙ ᴧᴅꜱ ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [ᴘᴜᴊᴀ ꭙ ᴍᴜsɪᴄ]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [⏤ 𝚨𝛎𝛜𝛈ɢᴇꝛs 𓂃᪲᪳ ⤹💗ˎ˗](t.me/iTzAvengers) !!**"
+c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴍᴀʜᴀ ꭙ мυѕιᴄ ♪ [ ɴᴏ ♡゙ ᴧᴅꜱ ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [ᴧʟɪsʜᴧ ꭙ ᴍᴜsɪᴄ ♪]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [⏤ 𝚨𝛎𝛜𝛈ɢᴇꝛs 𓂃᪲᪳ ⤹💗ˎ˗](t.me/iTzAvengers) !!**"
 
 c_brod_1 : "» ʏᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n\n ᴊᴏɪɴ [˹ᴧᴠєɴɢєʀs ɴᴇᴛᴡσʀᴋ˼]({0}) ᴏʀ ᴅᴍ @AvengersNetwork ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
 
